# logsend

./: .gitignore  README.md  pyproject.toml
examples/: basic_usage.py  context_manager.py  vector.toml  with_standard_logging.py
src/logsend/: __init__.py  disk_queue.py  handler.py  logger.py  sender.py
